--- a/Game_FlipImage/index.html
+++ b/Game_FlipImage/index.html
@@ -25,7 +25,7 @@
                 <span class="mode easy">Easy</span>
                 <span class="mode medium">Medium</span>
                 <span class="mode hard">Hard</span>
-                <span class="mode super-hard">Super hard</span>
+                <span class="mode super-hard">Super</span>
                 <span class="mode hell">Hell</span>
             </div>
         </div>
@@ -73,7 +73,7 @@
                         </p>
                     </li>
                     <li class="guide-mode__super">
-                        <p class="mode-name">Super hard</p>
+                        <p class="mode-name">Super</p>
                         <p class="mode-desc">
                             + Điểm: 120<br />
                             + Tìm 2 item giống nhau.<br />
