--- a/Game_FlipImage/index.html
+++ b/Game_FlipImage/index.html
@@ -45,9 +45,8 @@
 
             <div class="guide-container">
                 <p class="guide-summary">
-                    Click vào hình để lật bài, item giống nhau sẽ được + điểm tùy vào mode, lật đúng liên tiếp để được
-                    bonus
-                    điểm.
+                    - Bấm vào Mode để chọn chế độ <br />
+                    - Click vào hình để lật bài, item giống nhau sẽ được + điểm, lật đúng liên tiếp để được bonus điểm.
                 </p>
 
                 <ul class="guide-mode">
