--- a/Ani/index.html
+++ b/Ani/index.html
@@ -12,77 +12,22 @@
 
 <body>
     <div id="root">
-        <p class="ani fade">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque voluptatem blanditiis quasi numquam
-            reprehenderit hic nobis, sapiente possimus totam quo voluptatum sint obcaecati minima minus nulla assumenda
-            velit natus qui!
-        </p>
         <p class="ani fade-in">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque voluptatem blanditiis quasi numquam
             reprehenderit hic nobis, sapiente possimus totam quo voluptatum sint obcaecati minima minus nulla assumenda
             velit natus qui!
         </p>
-        <p class="ani fade-in-bottom-100">
+        <p class="ani fade-inleft">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque voluptatem blanditiis quasi numquam
             reprehenderit hic nobis, sapiente possimus totam quo voluptatum sint obcaecati minima minus nulla assumenda
             velit natus qui!
         </p>
-        <p class="ani fade-in-left">
+        <p class="ani fade-intop">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque voluptatem blanditiis quasi numquam
             reprehenderit hic nobis, sapiente possimus totam quo voluptatum sint obcaecati minima minus nulla assumenda
             velit natus qui!
         </p>
-        <p class="ani fade-in-left-100">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque voluptatem blanditiis quasi numquam
-            reprehenderit hic nobis, sapiente possimus totam quo voluptatum sint obcaecati minima minus nulla assumenda
-            velit natus qui!
-        </p>
-        <p class="ani fade-in-left-screen">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque voluptatem blanditiis quasi numquam
-            reprehenderit hic nobis, sapiente possimus totam quo voluptatum sint obcaecati minima minus nulla assumenda
-            velit natus qui!
-        </p>
-        <p class="ani fade-in-right">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque voluptatem blanditiis quasi numquam
-            reprehenderit hic nobis, sapiente possimus totam quo voluptatum sint obcaecati minima minus nulla assumenda
-            velit natus qui!
-        </p>
-        <p class="ani fade-in-right-100">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque voluptatem blanditiis quasi numquam
-            reprehenderit hic nobis, sapiente possimus totam quo voluptatum sint obcaecati minima minus nulla assumenda
-            velit natus qui!
-        </p>
-        <p class="ani fade-in-right-screen">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque voluptatem blanditiis quasi numquam
-            reprehenderit hic nobis, sapiente possimus totam quo voluptatum sint obcaecati minima minus nulla assumenda
-            velit natus qui!
-        </p>
-        <p class="ani fade-in-top">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque voluptatem blanditiis quasi numquam
-            reprehenderit hic nobis, sapiente possimus totam quo voluptatum sint obcaecati minima minus nulla assumenda
-            velit natus qui!
-        </p>
-        <p class="ani fade-in-top-100">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque voluptatem blanditiis quasi numquam
-            reprehenderit hic nobis, sapiente possimus totam quo voluptatum sint obcaecati minima minus nulla assumenda
-            velit natus qui!
-        </p>
-        <p class="ani fade-in-top-screen">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque voluptatem blanditiis quasi numquam
-            reprehenderit hic nobis, sapiente possimus totam quo voluptatum sint obcaecati minima minus nulla assumenda
-            velit natus qui!
-        </p>
-        <p class="ani fade-in-bottom">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque voluptatem blanditiis quasi numquam
-            reprehenderit hic nobis, sapiente possimus totam quo voluptatum sint obcaecati minima minus nulla assumenda
-            velit natus qui!
-        </p>
-        <p class="ani fade-in-bottom-100">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque voluptatem blanditiis quasi numquam
-            reprehenderit hic nobis, sapiente possimus totam quo voluptatum sint obcaecati minima minus nulla assumenda
-            velit natus qui!
-        </p>
-        <p class="ani fade-in-bottom-screen">
+        <p class="ani fade-inright">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque voluptatem blanditiis quasi numquam
             reprehenderit hic nobis, sapiente possimus totam quo voluptatum sint obcaecati minima minus nulla assumenda
             velit natus qui!
