--- a/Game_FlipCard2/index.html
+++ b/Game_FlipCard2/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game | Flip Card 2</title>
+    <link rel="stylesheet" href="../assets/css/reset.css">
     <link rel="stylesheet" href="./css/styled.css">
     <link rel="shortcut icon" href="../images/default/fa_icon.svg" type="image/x-icon">
 
@@ -15,19 +16,23 @@
 
     <div id="root">
 
-        <div class="cards">
-            <span class="card"></span>
-            <span class="card"></span>
-            <span class="card"></span>
-            <span class="card"></span>
-            <span class="card"></span>
-            <span class="card"></span>
-            <span class="card"></span>
-            <span class="card"></span>
-            <span class="card"></span>
-            <span class="card"></span>
-            <span class="card"></span>
-            <span class="card"></span>
+        <div class="screen">
+
+            <div class="cards">
+                <span class="card"></span>
+                <span class="card"></span>
+                <span class="card"></span>
+                <span class="card"></span>
+                <span class="card"></span>
+                <span class="card"></span>
+                <span class="card"></span>
+                <span class="card"></span>
+                <span class="card"></span>
+                <span class="card"></span>
+                <span class="card"></span>
+                <span class="card"></span>
+
+            </div>
 
         </div>
 
