--- a/index.html
+++ b/index.html
@@ -153,14 +153,11 @@
                     delayTimingMin: 0.2, thời gian delay tới lúc bắt đầu hiệu ứng
                     delayTimingEachOther: 0.04, thời gian delay giữa các phần tử
                 });
-
-                muốn thay cái gì copy xuống dưới đổi
-
         */
         Loading({
-             columns: 15,
-             loadingType: "center4",
-             loadingStyle: "bounce",
+            columns: 15,
+            loadingType: "topleft",
+            loadingStyle: "bounce",
         });
 
 
