--- a/BoardCard_3cao/index.html
+++ b/BoardCard_3cao/index.html
@@ -56,6 +56,17 @@
 
     <script src="../assets/js/jquery-3.4.1.js"></script>
     <script src="./js/app.js"></script>
+    <!-- <script>
+        const App = (() => {
+            const name = "asd";
+
+            return ({
+                getName: function () {
+                    console.log(name);
+                }
+            });
+        })();
+    </script> -->
 
 </body>
 
